--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "serve": "gatsby serve"
   },
   "dependencies": {
+    "dotenv": "^6.0.0",
     "gatsby": "^2.0.0-rc.10",
     "gatsby-plugin-sass": "^2.0.0-rc.2",
     "gatsby-plugin-typescript": "^2.0.0-rc.3",
+    "gatsby-source-contentful": "^1.3.54",
     "node-sass": "^4.9.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
