--- a/package.json
+++ b/package.json
@@ -3,19 +3,20 @@
   "description": "Gatsby Example Typescript Sass Contentful",
   "license": "MIT",
   "scripts": {
+    "start": "gatsby develop",
     "develop": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve"
   },
   "dependencies": {
-    "dotenv": "^6.0.0",
-    "gatsby": "^2.0.0-rc.10",
-    "gatsby-plugin-sass": "^2.0.0-rc.2",
-    "gatsby-plugin-typescript": "^2.0.0-rc.3",
-    "gatsby-source-contentful": "^1.3.54",
-    "node-sass": "^4.9.3",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "typescript": "^3.0.3"
+    "dotenv": "^8.0.0",
+    "gatsby": "^2.13.28",
+    "gatsby-plugin-sass": "^2.1.3",
+    "gatsby-plugin-typescript": "^2.1.2",
+    "gatsby-source-contentful": "^2.1.14",
+    "node-sass": "^4.12.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "typescript": "^3.5.3"
   }
 }
